--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <img src="forum5.jpg" alt="Award 2">
             
 
-            <img src="/website/anniversary.jpg" alt="Award 2">
+            <img src="anniversary.jpg" alt="Award 2">
 
 
 
@@ -264,4 +264,5 @@
     </script>
 
 </body>
+
 </html>
