Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
 <footer class="w-full bg-black border-t border-white/5 pt-16">
   <div class="max-w-7xl mx-auto px-6 text-center">
-    <img src="/website/gchamber.jpg" alt="Logo" class="mx-auto h-20 w-auto grayscale opacity-50 mb-8">
+    <img src="gchamber.jpg" alt="Logo" class="mx-auto h-20 w-auto grayscale opacity-50 mb-8">
     
     <p class="text-slate-500 text-sm tracking-[0.2em] uppercase font-bold mb-4">
       The General Santos City Chamber of Commerce and Industry, Inc.
@@ -266,3 +266,4 @@
 </body>
 
 </html>
+
