--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="max-w-7xl mx-auto flex justify-between items-center">
             <div class="flex items-center gap-4">
                 <div class="logo-container">
-                    <img src="/website/gchamber.jpg" alt="GSCCCII">
+                    <img src="gchamber.jpg" alt="GSCCCII">
                 </div>
                 <div>
                     <h1 class="gold-text text-2xl tracking-tighter" style="font-family: 'Cinzel', serif;">GSCCCII</h1>
@@ -266,4 +266,5 @@
 </body>
 
 </html>
+
 
